--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,20 @@
 spring.datasource.url=jdbc:postgresql://postgresleotest.cdh40z6ixbnl.us-east-1.rds.amazonaws.com/postgresleotest
 spring.datasource.username=seenitpostgres
 spring.datasource.password=passwordSpringBootAdmin
-server.port=8081
 
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation= true
+spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.PostgreSQLDialect
+
+# Hibernate ddl auto (create, create-drop, validate, update)
+spring.jpa.hibernate.ddl-auto= update
+
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
+
+#spring.datasource.url=jdbc:postgresql://postgresleotest.cdh40z6ixbnl.us-east-1.rds.amazonaws.com/postgresleotest
+#spring.datasource.username=seenitpostgres
+#spring.datasource.password=passwordSpringBootAdmin
+#server.port=8081
+#
 
 
