social network + user with jpa repo

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,7 +18,7 @@ spring.servlet.multipart.max-request-size=10MB
 #spring.datasource.url=jdbc:postgresql://postgresleotest.cdh40z6ixbnl.us-east-1.rds.amazonaws.com/postgresleotest
 #spring.datasource.username=seenitpostgres
 #spring.datasource.password=passwordSpringBootAdmin
-#server.port=8081
+server.port=8081
 #
 
 
