social network + user with jpa repo

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,7 +23,7 @@ spring.datasource.password=passwordSpringBootAdmin
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.PostgreSQLDialect
-server.port=8081
+#server.port=8081
 
 
 
