--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,8 +5,12 @@
 #spring.datasource.username=seenit
 #spring.datasource.password=password
 
-#spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation= true
+#spring.jpa.hibernate.ddl-auto=update
 #spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.PostgreSQLDialect
+#server.port=8081
+#
+#spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation= true
+
 #
 ## Hibernate ddl auto (create, create-drop, validate, update)
 #spring.jpa.hibernate.ddl-auto= update
@@ -23,8 +27,10 @@ spring.datasource.password=passwordSpringBootAdmin
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.PostgreSQLDialect
-#server.port=8081
-
+server.port=5000
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation= true
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
 
 
 
